@@ -1,0 +1,18 @@
+.modal__background {
+  background-color: rgba(119, 119, 119, 0.25);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+}
+
+.modal__body {
+  position: absolute;
+  top: 20%;
+  left: 20%;
+  width: 60%;
+  background-color: white;
+  padding: 30px;
+  box-shadow: 2px 2px 8px #888
+}
