@@ -6,7 +6,8 @@ Local-only = Changes not reflected in Source Code
 Backend = Change is not user facing
 
 ## [2016-01-16] [Since 2016-01-09 Integration]
-
+### Changed:
+- #154: Clinic form now asks users to confirm before deleting location
 
 ## [2016-01-09] [Since 2016-01-02 Integration]
 ### Added:
